--- a/src/components/works/Works.css
+++ b/src/components/works/Works.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 0.5rem;
 }
 
 .__img_wrapper {
@@ -62,6 +63,7 @@
     margin-left: 4em;
     margin-right: 4em;
     flex-direction: column;
+    gap: 1rem;
   }
   .__content_wrapper {
     width: 70%;
@@ -76,10 +78,6 @@
 }
 
 @media (max-width: 425px) {
-  .project {
-    gap: 1.5rem;
-  }
-
   .__img_wrapper > img {
     max-height: 20rem;
   }
